--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
     </div>
 
     <footer>
-        <p>&copy; 2023 Gold Sentence Cards | Create beautiful quote cards to inspire others</p>
+        <p>&copy; 2025 Gold Sentence Cards | Create beautiful quote cards to inspire others</p>
         <div class="app-links">
-            <a href="#" class="app-link"><i class="fab fa-android"></i> Android App</a>
-            <a href="#" class="app-link"><i class="fab fa-apple"></i> iOS App</a>
+            <a href="#" class="app-link"><i class="fab fa-android"></i> Android App coming soon</a>
+            <a href="#" class="app-link"><i class="fab fa-apple"></i> iOS App coming soon</a>
         </div>
     </footer>
 
