--- a/index.html
+++ b/index.html
@@ -118,3 +118,12 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+    <footer>
+        <p>&copy; 2023 Gold Sentence Cards | Create beautiful quote cards to inspire others</p>
+        <div class="contact-links">
+            <a href="https://discord.gg/AXpqbceaFt" class="contact-link" target="_blank"><i class="fab fa-discord"></i> 加入我们的Discord社区</a>
+            <a href="#" class="app-link"><i class="fab fa-android"></i> Android App</a>
+            <a href="#" class="app-link"><i class="fab fa-apple"></i> iOS App</a>
+        </div>
+    </footer>
