--- a/index.html
+++ b/index.html
@@ -108,22 +108,18 @@
 
     <footer>
         <p>&copy; 2025 Gold Sentence Cards | Create beautiful quote cards to inspire others</p>
-        <div class="app-links">
-            <a href="#" class="app-link"><i class="fab fa-android"></i> Android App coming soon</a>
-            <a href="#" class="app-link"><i class="fab fa-apple"></i> iOS App coming soon</a>
+        <div class="contact-links">
+            <a href="https://discord.gg/AXpqbceaFt" class="contact-link" target="_blank"><i class="fab fa-discord"></i> Welcome to our Discord community!
+We're so glad to have you here — let's create and share beautiful cards together!</a>
+            <a href="#" class="app-link"><i class="fab fa-android"></i> Android App soon</a>
+            <a href="#" class="app-link"><i class="fab fa-apple"></i> iOS App soon</a>
         </div>
     </footer>
 
-    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
-    <script src="script.js"></script>
+<script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+<script src="script.js"></script>
+  
 </body>
 </html>
 
-    <footer>
-        <p>&copy; 2023 Gold Sentence Cards | Create beautiful quote cards to inspire others</p>
-        <div class="contact-links">
-            <a href="https://discord.gg/AXpqbceaFt" class="contact-link" target="_blank"><i class="fab fa-discord"></i> 加入我们的Discord社区</a>
-            <a href="#" class="app-link"><i class="fab fa-android"></i> Android App</a>
-            <a href="#" class="app-link"><i class="fab fa-apple"></i> iOS App</a>
-        </div>
-    </footer>
+
