--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <div class="retro-background"></div>
     
     <header>
-        <div class="logo-container">
-            <div class="vintage-whale-logo"></div>
+             <div class="logo-container">
+            <!-- 将div替换为img标签 -->
+            <img src="images/logo.png" alt="Gold Sentence Cards Logo" class="site-logo">
         </div>
         <h1>Gold Sentence Cards</h1>
         <p>Create and share beautiful cards with your favorite quotes</p>
