--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
              <div class="logo-container">
             <!-- 将div替换为img标签 -->
-            <img src="images/logo.png" alt="Gold Sentence Cards Logo" class="site-logo">
+            <img src="logo.png" alt="Gold Sentence Cards Logo" class="site-logo">
         </div>
         <h1>Gold Sentence Cards</h1>
         <p>Create and share beautiful cards with your favorite quotes</p>
