--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="description" content="Create and share beautiful quote cards with your favorite quotes using Gold Sentence Cards.">
     <meta name="keywords" content="quote cards, Gold Sentence Cards, create quote images, share quotes">
-    <meta name="author" content="Gold Sentence Cards">
+    <meta name="author" content="felicitywhale">
 
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-W5WB1Z38J0"></script>
