--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="description" content="Create and share beautiful quote cards with your favorite quotes using Gold Sentence Cards.">
-    <meta name="keywords" content="quote cards, Gold Sentence Cards, create quote images, share quotes">
+    <meta name="keywords" content="quote cards, create quote images, quote generator, goldcard, sentence cards, typography, inspirational quotes, social media sharing">
     <meta name="author" content="felicitywhale">
 
     <!-- Google tag (gtag.js) -->
